feat: Enhance project configuration and timezone data
- Added test scripts to package.json for improved testing capabilities.
- Cleaned up timezone data by removing commented sections and unnecessary whitespace in timezones.ts, streamlining the city and country mappings.

--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "tauri": "tauri"
+    "tauri": "tauri",
+    "test": "vitest",
+    "test:ui": "vitest --ui"
   },
   "dependencies": {
     "@ark-ui/react": "^5.25.0",
